--- a/frontend/mission-ops/src/app/cubesat-sys-inputs/cubesat-sys-inputs.component.html
+++ b/frontend/mission-ops/src/app/cubesat-sys-inputs/cubesat-sys-inputs.component.html
@@ -13,6 +13,7 @@
           </li>
         </ul>
         <button type="button" class="btn btn-outline-dark" (click)="promptAddSystem()">Add sys</button>
+        <button type="button" class="btn btn-outline-dark" (click)="promptEditSystem()">Edit sys</button>
         <button type="button" class="btn btn-outline-dark" (click)="promptDeleteSystem()">Remove sys</button>
     </div>
   </div>
@@ -30,6 +31,7 @@
               </li>
             </ul>
             <button type="button" class="btn btn-outline-dark" (click)="promptAddComponent()">Add component</button>
+            <button type="button" class="btn btn-outline-dark" (click)="promptEditComponent()">Edit component</button>
             <button type="button" class="btn btn-outline-dark" (click)="promptDeleteComponent()">Remove component</button>
       </div>
       <ng-template #noSystem>
