--- a/frontend/mission-ops/src/app/create-system/create-system.component.html
+++ b/frontend/mission-ops/src/app/create-system/create-system.component.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-    <h4 class="modal-title">Add CubeSat System</h4>
+    <h4 class="modal-title">{{modalTitle}}</h4>
     <button type="button" class="close" aria-label="Close"
      (click)="activeModal.dismiss('Cross click')">
     </button>
@@ -16,9 +16,9 @@
       </div>
     </div>
   <div class="modal-footer">
-    <button class = "btn btn-success"
-      [disabled] = "!createSysForm.valid">
-      Add New System
+    <button [ngClass] = "isEditing ? 'btn btn-info' : 'btn btn-success'"
+    [disabled] = "!createSysForm.valid">
+      {{modalSubmit}}
     </button>
   </div>
   </form>
