Added editing for component telemetries
- Added handling for switching between bounded numeric types and
non-bounded types.
- this seriously needs validation

--- a/frontend/mission-ops/src/app/cubesat-sys-inputs/cubesat-sys-inputs.component.html
+++ b/frontend/mission-ops/src/app/cubesat-sys-inputs/cubesat-sys-inputs.component.html
@@ -60,6 +60,7 @@
               </li>
             </ul>
             <button type="button" class="btn btn-outline-dark" (click)="promptAddCompTelem()">Add component telemetry</button>
+            <button type="button" class="btn btn-outline-dark" (click)="promptEditCompTelem()">Edit component telemetry</button>
             <button type="button" class="btn btn-outline-dark" (click)="promptDeleteCompTelem()">Remove component telemetry</button>
       </div>
       <ng-template #noComponent>
