--- a/frontend/mission-ops/src/app/create-component-telemetry/create-component-telemetry.component.html
+++ b/frontend/mission-ops/src/app/create-component-telemetry/create-component-telemetry.component.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-    <h4 class="modal-title">Add CubeSat Component Telemetry</h4>
+    <h4 class="modal-title">{{modalTitle}}</h4>
     <button type="button" class="close" aria-label="Close"
      (click)="activeModal.dismiss('Cross click')">
     </button>
@@ -12,7 +12,7 @@
           <input type = "text"
             [value] = "system.systemName"
             class = "form-control"
-            formControlName = "system"
+            name = "system"
             readonly/>
         </div>
         <div class = "form-group">
@@ -20,7 +20,7 @@
           <input type = "text"
             [value] = "component.name"
             class = "form-control"
-            formControlName = "component"
+            name = "component"
             readonly/>
         </div>
         <div class = "form-group">
@@ -44,23 +44,23 @@
             </select>
         </div>
         <div *ngIf = "selectedTelemetryType && selectedTelemetryType.hasBounds">
-            <div class = "form-group">
-                <label for = "upperBound">Upper Bound</label>
-                <input type = "number"
-                  class = "form-control"
-                  formControlName = "upperBound"/>
-                <label for = "lowerBound">Lower Bound</label>
-                <input type = "number"
-                  class = "form-control"
-                  formControlName = "lowerBound"/>
-            </div>
+          <div class = "form-group">
+              <label for = "upperBound">Upper Bound</label>
+              <input type = "number"
+                class = "form-control"
+                formControlName = "upperBound"/>
+              <label for = "lowerBound">Lower Bound</label>
+              <input type = "number"
+                class = "form-control"
+                formControlName = "lowerBound"/>
+          </div>
         </div>
       </div>
     </div>
   <div class="modal-footer">
-    <button class = "btn btn-success"
+    <button [ngClass] = "isEditing ? 'btn btn-info' : 'btn btn-success'"
       [disabled] = "!createCompTelemForm.valid">
-      Add New Component Telemetry
+      {{modalSubmit}}
     </button>
   </div>
   </form>
