--- a/frontend/mission-ops/src/app/header/header.component.html
+++ b/frontend/mission-ops/src/app/header/header.component.html
@@ -23,6 +23,8 @@
             <a class="dropdown-item" href="/users/edit?id={{auth.getCurrentUser()?.id}}">Edit Profile</a>
             <a *ngIf="auth.isAdministrator()" class="dropdown-item" href="/users">Manage Users</a>
             <div class="dropdown-divider"></div>
+            <a *ngIf="auth.isAdministrator()" class="dropdown-item" href="/system-inputs">Manage System Inputs</a>
+            <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="/logout">Logout</a>
           </div>
         </li>
