--- a/frontend/mission-ops/src/app/execution-queue/execution-queue.component.html
+++ b/frontend/mission-ops/src/app/execution-queue/execution-queue.component.html
@@ -1,4 +1,22 @@
-<p>
-  execution-queue works!
-  Number of passes: {{passes.length}}
-</p>
+<div class="row">
+  <div class="col">
+    <ul class="list-group">
+      <li *ngFor="let pass of passes"
+      (click)="onSelect(pass)"
+      [class.active]="pass === selectedPass"
+      class="list-group-item">
+        Pass {{pass.passID}}
+      </li>
+    </ul>    
+    <button type="button"
+    class="btn btn-success"
+    (click)="addPass()">Add New Pass</button>
+  </div>
+  <div class="col">
+    <div *ngIf="selectedPass">
+      <div *ngFor="let queuedTelecommand of passQueuedTelecommands" class="border border-primary">
+          <app-queued-telecommand [queuedTelecommand] = "queuedTelecommand"></app-queued-telecommand>
+      </div>
+    </div>
+  </div>
+</div>
