--- a/frontend/mission-ops/src/app/transmission-queue/transmission-queue.component.html
+++ b/frontend/mission-ops/src/app/transmission-queue/transmission-queue.component.html
@@ -1,3 +1,19 @@
-<p>
-  transmission-queue works!
-</p>
+<div class = "row">
+  <div class = "col">
+    <ul class="list-group">
+        <li *ngFor="let pass of passes"
+        (click)="onSelect(pass)"
+        [class.active]="pass === selectedPass"
+        class="list-group-item">
+          Pass {{pass.passID}}
+        </li>
+      </ul> 
+  </div>
+  <div class="col">
+      <div *ngIf="selectedPass">
+        <div *ngFor="let queuedTelecommand of passQueuedTelecommands" class="border border-primary">
+            <app-queued-telecommand [queuedTelecommand] = "queuedTelecommand"></app-queued-telecommand>
+        </div>
+      </div>
+    </div>
+</div>
