--- a/frontend/mission-ops/src/app/create-queued-telecommand/create-queued-telecommand.component.html
+++ b/frontend/mission-ops/src/app/create-queued-telecommand/create-queued-telecommand.component.html
@@ -38,7 +38,7 @@
         </div>
         <div class = "form-group">
           <label for = "executionDate">Execution Datetime</label>
-          <app-datetime-picker [(date)] = "executionDate" [(time)] = "executionTime" dateFormControlName = "executionDate" timeFormControlName = "executionTime" [formGroup] = "createQtcForm"></app-datetime-picker>
+          <app-datetime-picker dateFormControlName = "executionDate" timeFormControlName = "executionTime" [formGroup] = "createQtcForm"></app-datetime-picker>
         </div>
     </div>
   <div class="modal-footer">
