--- a/frontend/mission-ops/src/app/datetime-picker/datetime-picker.component.html
+++ b/frontend/mission-ops/src/app/datetime-picker/datetime-picker.component.html
@@ -2,13 +2,13 @@
   <div class="form-group">
     <div class="input-group">
       <input class="form-control" placeholder="yyyy-mm-dd"
-              [formControlName]="dateFormControlName" [(ngModel)]="date" ngbDatepicker #d="ngbDatepicker">
+              [formControlName]="dateFormControlName" ngbDatepicker #d="ngbDatepicker">
       <div class="input-group-append">
         <button class="btn btn-outline-secondary calendar" (click)="d.toggle()" type="button"></button>
       </div>
     </div>
   </div>
   <div class="form-group">
-    <ngb-timepicker [(ngModel)]="time" [formControlName] = "timeFormControlName"></ngb-timepicker>
+    <ngb-timepicker [formControlName] = "timeFormControlName"></ngb-timepicker>
   </div>
 </div>
