Pulled Add New Pass into general queues component
- Adds Pass to general Pass list that both queues use, so it was better suited to being in container.

--- a/frontend/mission-ops/src/app/queues/queues.component.html
+++ b/frontend/mission-ops/src/app/queues/queues.component.html
@@ -11,5 +11,6 @@
   </ngb-tab>
 </ngb-tabset>
 
-<button (click) = "promptAddQueuedTelecommand()">Add Telecommand</button>
+<button class = "btn btn-info" (click) = "promptAddQueuedTelecommand()">Add Telecommand to Queue</button>
+<button class="btn btn-success" (click)="addPass()">Add New Pass</button>
 
