Added event emit when reloading pass list
- Just clears the selected pass in the transmission queue.
- Definitely could expand this to do more later.. :squirrel:

--- a/frontend/mission-ops/src/app/queues/queues.component.html
+++ b/frontend/mission-ops/src/app/queues/queues.component.html
@@ -6,7 +6,7 @@
   </ngb-tab>
   <ngb-tab title = "Telecommand Transmission Queue">
     <ng-template ngbTabContent>
-      <app-transmission-queue [passes] = "passes"></app-transmission-queue>
+      <app-transmission-queue [events] = "reloadPass.asObservable()" [passes] = "passes"></app-transmission-queue>
     </ng-template>
   </ngb-tab>
 </ngb-tabset>
