--- a/frontend/mission-ops/src/app/queues/queues.component.html
+++ b/frontend/mission-ops/src/app/queues/queues.component.html
@@ -1,16 +1,28 @@
-<ngb-tabset type="pills">
-  <ngb-tab title="Time Tagged Execution Queue">
-    <ng-template ngbTabContent>
-      <app-execution-queue [passes] = "passes"></app-execution-queue>
-    </ng-template>
-  </ngb-tab>
-  <ngb-tab title = "Telecommand Transmission Queue">
-    <ng-template ngbTabContent>
-      <app-transmission-queue [events] = "reloadPass.asObservable()" [passes] = "passes"></app-transmission-queue>
-    </ng-template>
-  </ngb-tab>
-</ngb-tabset>
+<button (click) = "toggleActiveQueue()">{{executionQueue ? "Time Tagged" : "Transmission"}}</button>
+<ng-container *ngTemplateOutlet = "queue"></ng-container>
+
+<ng-template #queue>
+  <div class = "row">
+      <div class = "col">
+        <ul class="list-group">
+            <li *ngFor="let pass of passes"
+            (click)="onSelect(pass)"
+            [class.active]="pass === selectedPass"
+            class="list-group-item">
+              Pass {{pass.passID}}
+            </li>
+          </ul> 
+      </div>
+      <div class = "col">
+        <div *ngIf = "!executionQueue; else execQ">
+          <app-transmission-queue [events] = "reloadPass.asObservable()"></app-transmission-queue>
+        </div>
+        <ng-template #execQ>
+          <app-execution-queue [events] = "reloadPass.asObservable()"></app-execution-queue>
+        </ng-template>
+      </div>
+    </div>
+</ng-template>
 
 <button class = "btn btn-info" (click) = "promptAddQueuedTelecommand()">Add Telecommand to Queue</button>
 <button class="btn btn-success" (click)="addPass()">Add New Pass</button>
-
