--- a/frontend/mission-ops/src/app/telecommands/telecommands.component.html
+++ b/frontend/mission-ops/src/app/telecommands/telecommands.component.html
@@ -2,6 +2,7 @@
 <div class="row">
     <div class="col">
       <button type="button"
+      *ngIf="viewingExistingTelecommand"
       class="btn btn-success"
       (click)="addNewTelecommand()">Add New Telecommand</button>
       <ul class="list-group">
@@ -15,8 +16,12 @@
     </div>
     <div class="col">
       <app-telecommand-details [telecommand] = "selectedTelecommand" [existingTelecommand] = "viewingExistingTelecommand"></app-telecommand-details>      
-      
+      <div *ngFor="let error of newTelecommandErrorMessages">
+        <label style="color:red;">{{error}}</label>
+        <br />
+      </div>
       <button *ngIf="!viewingExistingTelecommand" (click)="saveTelecommand()" type="button" class="btn btn-success">Save Changes</button>
-      <button *ngIf="selectedTelecommand" (click)="archiveTelecommand()" type="button" class="btn btn-danger">Archive Telecommand</button>
+      <button *ngIf="selectedTelecommand && viewingExistingTelecommand" (click)="archiveTelecommand()" type="button" class="btn btn-danger">Archive Telecommand</button>
+      <button *ngIf="selectedTelecommand && !viewingExistingTelecommand" (click)="discardTelecommand()" type="button" class="btn btn-danger">Discard Telecommand</button>
     </div>
 </div>
