--- a/frontend/mission-ops/src/app/app.component.html
+++ b/frontend/mission-ops/src/app/app.component.html
@@ -1,4 +1,4 @@
 <app-header></app-header>
-<div class="container">
+<div class="container" style="margin-left: 0;">
     <router-outlet></router-outlet>
 </div>
