Working on batch creation
- only thing left do do is add new preset telecommand functionality. Blocked on dana pushing up the component from create queued telecommand

--- a/frontend/mission-ops/src/app/preset-telecommand-details/preset-telecommand-details.component.html
+++ b/frontend/mission-ops/src/app/preset-telecommand-details/preset-telecommand-details.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="presetTelecommand">
-  <div (click)="isCollapsed = !isCollapsed" [attr.aria-expanded]="!isCollapsed" aria-controls="presetTelecommandDetailsPane">  
+  <div style="cursor: pointer;" (click)="isCollapsed = !isCollapsed" [attr.aria-expanded]="!isCollapsed" aria-controls="presetTelecommandDetailsPane">  
     <span>
       {{presetTelecommand.name}}
     </span>
