--- a/frontend/mission-ops/src/app/create-queued-telecommand/create-queued-telecommand.component.html
+++ b/frontend/mission-ops/src/app/create-queued-telecommand/create-queued-telecommand.component.html
@@ -15,20 +15,45 @@
             name = "user"
             readonly/>
         </div>
-        <div class = "form-group">
-          <label for = "telecommandID">Telecommand</label>
-          <select class="form-control" 
-                  id="telecommandID" 
-                  formControlName="telecommandID"
-                  (change) = "updateTelecommand($event.target.value)">
-              <option *ngFor="let tc of telecommands, let i = index" 
-                      [attr.selected] = "i == 0 ? true : null" 
-                      [value] = "tc.telecommandID"
-                      [attr.value] = "tc.telecommandID">
-                      {{tc.name}} ({{tc.command}})
-              </option>
-          </select>
+        <div *ngIf = "!isBatch; else batch">
+            <div class = "form-group">
+              <label for = "telecommandID">Telecommand</label>
+              <select class="form-control" 
+                      id="telecommandID" 
+                      formControlName="telecommandID"
+                      (change) = "updateTelecommand($event.target.value)">
+                  <option *ngFor="let tc of telecommands, let i = index" 
+                          [attr.selected] = "i == 0 ? true : null" 
+                          [value] = "tc.telecommandID"
+                          [attr.value] = "tc.telecommandID">
+                          {{tc.name}}
+                  </option>
+              </select>
+            </div>
+            <div class = "form-group">
+              <label for = "commandParams">Command Parameters</label>
+              <textarea
+                formControlName = "commandParams"
+                class = "form-control"
+                [value] = "selectedTelecommand.command"></textarea>
+            </div>
         </div>
+        <ng-template #batch>
+          <div class = "form-group">
+              <label for = "telecommandBatchID">Telecommand</label>
+              <select class="form-control" 
+                      id="telecommandBatchID" 
+                      formControlName="telecommandBatchID"
+                      (change) = "updateTelecommandBatch($event.target.value)">
+                  <option *ngFor="let tc of telecommandBatches, let i = index" 
+                          [attr.selected] = "i == 0 ? true : null" 
+                          [value] = "tc.id"
+                          [attr.value] = "tc.id">
+                          {{tc.name}}
+                  </option>
+              </select>
+            </div>
+        </ng-template>
         </div>
         <div class = "form-group">
           <label for = "name">High Priority?</label>
@@ -42,7 +67,7 @@
         </div>
     </div>
   <div class="modal-footer">
-    <button [ngClass] = "isEditing ? 'btn btn-info' : 'btn btn-success'"
+    <button class = "btn btn-success"
       [disabled] = "!createQtcForm.valid">
       {{modalSubmit}}
     </button>
