--- a/frontend/mission-ops/src/app/header/header.component.html
+++ b/frontend/mission-ops/src/app/header/header.component.html
@@ -21,9 +21,12 @@
           <a class="nav-link dropdown-toggle" ngbDropdownToggle role="button" aria-haspopup="true" aria-expanded="false">{{auth.getCurrentUser()?.email}}</a>
           <div ngbDropdownMenu class="dropdown-menu">
             <a class="dropdown-item" href="/users/edit?id={{auth.getCurrentUser()?.id}}">Edit Profile</a>
+            <div class="dropdown-divider"></div>
             <a *ngIf="auth.isAdministrator()" class="dropdown-item" href="/users">Manage Users</a>
             <div class="dropdown-divider"></div>
             <a *ngIf="auth.isAdministrator()" class="dropdown-item" href="/system-inputs">Manage System Inputs</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="/anomaly-subscription">Manage Anomaly Subscriptions</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="/logout">Logout</a>
           </div>
