Added panorama-viewer component

--- a/frontend/mission-ops/src/app/app.component.html
+++ b/frontend/mission-ops/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-header></app-header>
 <div class="container" style="margin-left: 0;">
+    <app-panorama-viewer></app-panorama-viewer>
     <router-outlet></router-outlet>
 </div>
