Added telecommand batch to queue functionality
- Added PassSum class to handle local pass sum objects
- Consolidated queued telecommand creation in service to one function that takes an object of values, to be able to support batch insertion
- execution time in batch addition is broken still, will fix when getting @nickvanbommel 's changes
-

--- a/frontend/mission-ops/src/app/queues/queues.component.html
+++ b/frontend/mission-ops/src/app/queues/queues.component.html
@@ -2,6 +2,7 @@
   <div class = "col">
     <button class = "btn btn-primary" (click) = "toggleActiveQueue()">{{executionQueue ? "Time Tagged" : "Transmission"}}</button>
     <button class = "btn btn-info" (click) = "promptAddQueuedTelecommand()">Add Telecommand to Queue</button>
+    <button class = "btn btn-warning" (click) = "promptAddQueuedTelecommandBatch()">Add Telecommand Batch to Queue</button>
     <button class="btn btn-success" (click)="addPass()">Add New Pass</button>
     <ul class="list-group">
         <li *ngFor="let pass of passes"
