--- a/frontend/mission-ops/src/app/datetime-picker/datetime-picker.component.html
+++ b/frontend/mission-ops/src/app/datetime-picker/datetime-picker.component.html
@@ -2,15 +2,18 @@
   <div class="form-group">
     <div class="input-group">
       <input class="form-control" placeholder="yyyy-mm-dd"
-              [formControlName]="dateFormControlName" ngbDatepicker #d="ngbDatepicker">
+            [formControlName]="dateFormControlName" ngbDatepicker #d="ngbDatepicker"/>
       <div class="input-group-append">
         <button class="btn btn-outline-secondary calendar" (click)="d.toggle()" type="button">
-            <i class="fa fa-calendar"></i>
+          <i class="fa fa-calendar"></i>
         </button>
       </div>
     </div>
   </div>
-  <div class="form-group">
-    <ngb-timepicker [formControlName] = "timeFormControlName"></ngb-timepicker>
+  <div class = "d-flex justify-content-center align-items-center container">
+    <div class="form-group">
+      <ngb-timepicker [formControlName] = "timeFormControlName" [seconds]="true"></ngb-timepicker>
+    </div>
   </div>
 </div>
+
