Fixed checkbox for priority
- I'm never touching this again y i k e s

--- a/frontend/mission-ops/src/app/create-queued-telecommand/create-queued-telecommand.component.html
+++ b/frontend/mission-ops/src/app/create-queued-telecommand/create-queued-telecommand.component.html
@@ -54,16 +54,13 @@
           </select>
         </div>
       </ng-template>
-      <div class = "form-group">
-        <div class = "form-check-inline">
-          <input type = "checkbox"
-            class = "form-check-input form-control"
-            formControlName = "priorityLevel"/>
-          <label for = "priorityLevel"
-                class = "form-check-label">
-            High Priority
-          </label>
-        </div>
+      <div class = "form-check-inline">
+        <input type = "checkbox"
+          class = "form-check-input"
+          formControlName = "priorityLevel"/>
+        <label for = "priorityLevel">
+          High Priority
+        </label>
       </div>
       <div class = "form-group">
         <label for = "executionDate">Execution Datetime</label>
