subscription component and service

--- a/frontend/mission-ops/src/app/anomaly-subscription/anomaly-subscription.component.html
+++ b/frontend/mission-ops/src/app/anomaly-subscription/anomaly-subscription.component.html
@@ -1,3 +1,7 @@
-<p>
-  anomaly-subscription works!
-</p>
+<h3>Manage Anomaly Subscriptions</h3>
+
+<ul class="list-group">
+    <li *ngFor="let system of systems">
+      {{system}}
+    </li>
+  </ul>
