--- a/frontend/mission-ops/src/app/header/header.component.html
+++ b/frontend/mission-ops/src/app/header/header.component.html
@@ -26,7 +26,7 @@
             <div class="dropdown-divider"></div>
             <a *ngIf="auth.isAdministrator()" class="dropdown-item" href="/system-inputs">Manage System Inputs</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="/anomaly-subscription">Manage Anomaly Subscriptions</a>
+            <a class="dropdown-item" href="/anomaly-subscription?id={{auth.getCurrentUser()?.id}}">Manage Anomaly Subscriptions</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="/logout">Logout</a>
           </div>
