--- a/frontend/mission-ops/src/app/transmission-queue/transmission-queue.component.html
+++ b/frontend/mission-ops/src/app/transmission-queue/transmission-queue.component.html
@@ -1,7 +1,12 @@
 <div class="col">
   <div *ngIf="selectedPass">
-    <div *ngFor="let queuedTelecommand of passQueuedTelecommands" class="border border-primary">
-        <app-queued-telecommand [queuedTelecommand] = "queuedTelecommand"></app-queued-telecommand>
+      <ul class = "list-group">
+    <div *ngFor="let queuedTelecommand of passQueuedTelecommands">
+      <app-queued-telecommand class="list-group-item border border-primary" 
+          [queuedTelecommand] = "queuedTelecommand" 
+          [telecommands] = "telecommands">
+      </app-queued-telecommand>
     </div>
+  </ul>
   </div>
 </div>
