--- a/frontend/mission-ops/src/app/anomaly-subscription/anomaly-subscription.component.html
+++ b/frontend/mission-ops/src/app/anomaly-subscription/anomaly-subscription.component.html
@@ -1,7 +1,27 @@
 <h3>Manage Anomaly Subscriptions</h3>
 
-<ul class="list-group">
-    <li *ngFor="let system of systems">
-      {{system}}
+<div *ngIf="subscriptions && subscriptions.length > 0; else noSubscriptions">
+  <ul class="list-group">
+    <li *ngFor="let sub of subscriptions"
+    (click)="selectSub(sub.systemID)"
+    class="list-group-item">
+      {{sub.systemName}}
     </li>
   </ul>
+</div>
+<ng-template #noSubscriptions>
+    <p>
+      You don't have any anomaly subscriptions yet.
+    </p>
+</ng-template>
+
+
+
+<div class="dropdown">
+    <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownSystems" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      Subscribe to System
+    </button>
+    <div class="dropdown-menu" aria-labelledby="dropdownSystems">
+      <a *ngFor="let system of systems" class="dropdown-item" (click)="addSubscription(system.systemID)">{{system.systemName}}</a>
+    </div>
+</div>
