Assigned queued telecommands to proper execution pass
- Added backend route for getting on the execution pass ID
- Passed through telecommands and event emission in template

--- a/frontend/mission-ops/src/app/execution-queue/execution-queue.component.html
+++ b/frontend/mission-ops/src/app/execution-queue/execution-queue.component.html
@@ -1,7 +1,13 @@
 <div class="col">
-  <div *ngIf="selectedPass">
-    <div *ngFor="let queuedTelecommand of passQueuedTelecommands" class="border border-primary">
-        <app-queued-telecommand [queuedTelecommand] = "queuedTelecommand"></app-queued-telecommand>
+    <div *ngIf="selectedPass">
+        <ul class = "list-group">
+      <div *ngFor="let queuedTelecommand of passQueuedTelecommands">
+        <app-queued-telecommand class="list-group-item border border-primary" 
+            [queuedTelecommand] = "queuedTelecommand" 
+            [telecommands] = "telecommands"
+            (reloadQueuedTelecommands)="reloadQueuedTelecommands($event)">
+        </app-queued-telecommand>
+      </div>
+    </ul>
     </div>
   </div>
-</div>
